--- a/public/bower_dependencies/bootstrapValidator/demo/container.html
+++ b/public/bower_dependencies/bootstrapValidator/demo/container.html
@@ -25,11 +25,13 @@
                             <label class="col-lg-3 control-label">Full name</label>
                             <div class="col-lg-4">
                                 <input type="text" class="form-control" name="firstName" placeholder="First name" />
-                                <span class="help-block" id="firstNameMessage" />
+                                <span class="help-block" id="firstNameMessage">
+
+                                </span>
                             </div>
                             <div class="col-lg-4">
                                 <input type="text" class="form-control" name="lastName" placeholder="Last name" />
-                                <span class="help-block lastNameMessage" />
+                                <span class="help-block lastNameMessage"></span>
                             </div>
                         </div>
 
