--- a/public/bower_dependencies/bootstrapValidator/demo/validators.html
+++ b/public/bower_dependencies/bootstrapValidator/demo/validators.html
@@ -74,16 +74,9 @@
                             </div>
 
                             <div class="form-group">
-                                <label class="col-lg-3 control-label">US Phone number</label>
+                                <label class="col-lg-3 control-label">Phone number</label>
                                 <div class="col-lg-5">
-                                    <input type="text" class="form-control" name="phoneNumberUS" />
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-lg-3 control-label">UK Phone number</label>
-                                <div class="col-lg-5">
-                                    <input type="text" class="form-control" name="phoneNumberUK" />
+                                    <input type="text" class="form-control" name="phoneNumber" />
                                 </div>
                             </div>
 
@@ -197,25 +190,16 @@ $(document).ready(function() {
             website: {
                 validators: {
                     uri: {
-                        allowLocal: true,
                         message: 'The input is not a valid URL'
                     }
                 }
             },
-            phoneNumberUS: {
+            phoneNumber: {
                 validators: {
-                    phone: {
-                        message: 'The input is not a valid US phone number'
+                    digits: {
+                        message: 'The value can contain only digits'
                     }
                 }
-            },
-            phoneNumberUK: {
-            	validators: {
-            		phone: {
-            			message: 'The input is not a valid UK phone number',
-            			country: 'GB'
-            		}
-            	}
             },
             color: {
                 validators: {
